Fix cutoff on landscape mobile

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,13 @@
 	padding: 0;
 }
 
+html {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100%;
+}
+
 body {
 	align-items: center;
 	background: var(--background);
@@ -16,9 +23,8 @@ body {
 	flex-direction: column;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	height: 100vh;
+	height: 100%;
 	justify-content: center;
-	max-height: 100%;
 	max-width: 100%;
 	touch-action: manipulation;
 	user-select: none;
@@ -48,9 +54,10 @@ footer {
 	color: #777;
 	display: flex;
 	font-weight: bold;
-	height: 20px;
+	height: 48px;
 	justify-content: center;
-	max-width: 800px;
+	padding-bottom: 24px;
+	max-width: 640px;
 	width: 100%;
 }
 
@@ -59,7 +66,8 @@ footer {
 	display: flex;
 	justify-content: center;
 	margin: -24px 24px 24px;
-	max-width: 800px;
+	max-height: calc(100% - 48px);
+	max-width: 640px;
 	width: 100%;
 }
 
@@ -82,8 +90,8 @@ footer {
 	font-weight: bold;
 	justify-content: center;
 	margin: -32px 0 32px;
-	max-width: 800px;
-	padding: 16px;
+	max-width: 640px;
+	padding: 16px 0;
 	position: absolute;
 	text-align: center;
 	text-shadow: 0 -1px #333, 1px 0 #333, 0 -1px #333, -1px 0 #333,
